<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="3dp" >

        <!-- 立即登录 -->

        <LinearLayout
            style="@style/setting_style"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="10dp" >

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/defaultimg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/setting_registerId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/setting_click_change"
                    android:text="@string/setting_register" />

                <TextView
                    android:id="@+id/user_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_register_hint" />
            </LinearLayout>
        </LinearLayout>

        <!-- 书店雷达 -->

        <LinearLayout
            android:id="@+id/setting_bookstore_radarId"
            style="@style/setting_style"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@android:drawable/ic_dialog_map" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/setting_click_change"
                android:text="@string/setting_bookstore_radar" />
        </LinearLayout>

        <!-- 心情闹钟 -->

        <LinearLayout
            style="@style/setting_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/alarm" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_check_clock" />
                </LinearLayout>

                <ToggleButton
                    android:id="@+id/setting_check_clockId"
                    android:layout_width="40dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/setting_choice_button"
                    android:textOff=""
                    android:textOn="" />
            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:src="@drawable/dashed_line" />

            <LinearLayout
                android:id="@+id/setting_clockLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="5dp"
                android:visibility="gone" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="设定时间:  " />

                <TextView
                    android:id="@+id/clockTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00:00:00" />
            </LinearLayout>
        </LinearLayout>

        <!-- 二维码扫描 -->

        <LinearLayout
            android:id="@+id/setting_thinkChangeId"
            style="@style/setting_style"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@android:color/transparent"
                android:src="@android:drawable/ic_menu_camera" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/setting_click_change"
                android:text="@string/setting_thinkChange" />
        </LinearLayout>
        <!-- 抒情小屋 -->

        <LinearLayout
            android:id="@+id/setting_chatroomId"
            style="@style/setting_style"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@android:color/transparent"
                android:src="@android:drawable/ic_btn_speak_now" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/setting_click_change"
                android:text="@string/setting_chatroom" />
        </LinearLayout>

        <RelativeLayout
            style="@style/setting_style"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20sp"
            android:layout_weight="4"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <!-- 应用精选 -->

                <RelativeLayout
                    android:id="@+id/setting_choicenessId"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal" >

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/rmdapp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/setting_click_change"
                            android:text="@string/setting_apply_choice" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/umeng_xp_detail365" />
                </RelativeLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/dashed_line" />

                <!-- 检测更新 -->

                <LinearLayout
                    android:id="@+id/setting_newVersionId"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/setting_update" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/setting_click_change"
                        android:text="@string/setting_detection_newVersion" />
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/dashed_line" />

                <!-- 意见反馈 -->

                <RelativeLayout
                    android:id="@+id/setting_feedbackId"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal" >

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/setting_feedback" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/setting_click_change"
                            android:text="@string/setting_opinion_feedback" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/umeng_xp_detail365" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>